user-login (given extra paramter to set desired expireation for session) and modified swagger.yaml accordingly
