# swaggerDocumentationFiles/swagger.yaml
@@ -105,164 +105,164 @@ components:
         - email
         - password
 
-    Account:
-      type: object
-      properties:
-        accountId:
-          type: string
-          format: uuid
-          description: "Unique identifier for the account."
-        accountName:
-          type: string
-          description: "Name of the account."
-          required: true
-        accountType:
-          type: string
-          enum: ["customer", "super-admin"]
-          description: "Type of the account."
-        companyName:
-          type: string
-          description: "Company name associated with the account."
-        logo:
-          type: string
-          description: "URL of the company's logo."
-        role:
-          type: string
-          description: "Role of the account, default is 'super-admin'."
-        phone:
-          type: string
-          minLength: 10
-          maxLength: 15
-          pattern: "^[0-9]+$"
-          description: "Mobile number of the account."
-          unique: [true, "Phone number has to be unique"]
-        email:
-          type: string
-          format: email
-          description: "Email address of the account."
-          unique: [true, "Email has to be unique"]
-        password:
-          type: string
-          description: "Hashed password of the account."
-        address:
-          type: string
-          description: "Address of the account holder."
-        city:
-          type: string
-          description: "City of the account holder."
-        state:
-          type: string
-          description: "State of the account holder."
-        country:
-          type: string
-          description: "Country of the account holder."
-        pincode:
-          type: string
-          description: "Pincode of the account holder."
-        status:
-          type: string
-          enum: ["active", "in-progress", "deleted", "blocked"]
-          description: "Status of the account."
-        createdAt:
-          type: string
-          format: date-time
-          description: "Timestamp when the account was created."
-        updatedAt:
-          type: string
-          format: date-time
-          description: "Timestamp when the account was last updated."
-      required:
-        - accountName
-        - accountType
-        - companyName
-        - phone
-        - email
-        - password
-        - city
-        - state
-        - country
-        - pincode
+    # Account:
+    #   type: object
+    #   properties:
+    #     accountId:
+    #       type: string
+    #       format: uuid
+    #       description: "Unique identifier for the account."
+    #     accountName:
+    #       type: string
+    #       description: "Name of the account."
+    #       required: true
+    #     accountType:
+    #       type: string
+    #       enum: ["customer", "super-admin"]
+    #       description: "Type of the account."
+    #     companyName:
+    #       type: string
+    #       description: "Company name associated with the account."
+    #     logo:
+    #       type: string
+    #       description: "URL of the company's logo."
+    #     role:
+    #       type: string
+    #       description: "Role of the account, default is 'super-admin'."
+    #     phone:
+    #       type: string
+    #       minLength: 10
+    #       maxLength: 15
+    #       pattern: "^[0-9]+$"
+    #       description: "Mobile number of the account."
+    #       unique: [true, "Phone number has to be unique"]
+    #     email:
+    #       type: string
+    #       format: email
+    #       description: "Email address of the account."
+    #       unique: [true, "Email has to be unique"]
+    #     password:
+    #       type: string
+    #       description: "Hashed password of the account."
+    #     address:
+    #       type: string
+    #       description: "Address of the account holder."
+    #     city:
+    #       type: string
+    #       description: "City of the account holder."
+    #     state:
+    #       type: string
+    #       description: "State of the account holder."
+    #     country:
+    #       type: string
+    #       description: "Country of the account holder."
+    #     pincode:
+    #       type: string
+    #       description: "Pincode of the account holder."
+    #     status:
+    #       type: string
+    #       enum: ["active", "in-progress", "deleted", "blocked"]
+    #       description: "Status of the account."
+    #     createdAt:
+    #       type: string
+    #       format: date-time
+    #       description: "Timestamp when the account was created."
+    #     updatedAt:
+    #       type: string
+    #       format: date-time
+    #       description: "Timestamp when the account was last updated."
+    #   required:
+    #     - accountName
+    #     - accountType
+    #     - companyName
+    #     - phone
+    #     - email
+    #     - password
+    #     - city
+    #     - state
+    #     - country
+    #     - pincode
 
-    WebhookMasters:
-      type: object
-      properties:
-       webhookMasterId:
-        type: string
-        format: uuid
-        example: "60d5ec49c3b2a72e4c8b4567"
-       accountId:
-        type: string
-        format: uuid
-        example: "60d5ec49c3b2a72e4c8b4568"
-       userId:
-        type: string
-        format: uuid
-        example: "60d5ec49c3b2a72e4c8b4569"
-       location:
-        type: string
-        example: "New York"
-       name:
-        type: string
-        example: "OrderWebhook"
-       webHookUrl:
-        type: string
-        format: uri
-        example: "https://api.example.com/webhook"
-       authenticationCode:
-        type: string
-        unique: true
-        example: "auth-123456"
-       requestObject:
-        type: object
-        example: { "event": "order_created", "data": { "orderId": "12345" } }
-       primaryHookId:
-        type: string
-        example: "primary-001"
-       comments:
-        type: string
-        example: "Webhook for order processing"
-       status:
-        type: string
-        enum:
-        - active
-        - offline
-        - deleted
-        example: "active"
-       lastPullDate:
-        type: string
-        format: date-time
-        example: "2024-07-23T10:30:00Z"
-       webhookSettings:
-        type: object
-        properties:
-         periodType:
-          type: string
-          enum:
-            - each second
-            - once each minute
-            - once each hour
-            - once each day
-            - once each month
-          example: "once each day"
-         currentStatus:
-          type: string
-          enum:
-            - start
-            - stop
-          example: "stop"
-         interval:
-          type: integer
-          example: 1
-         expiresOn:
-          type: string
-          format: date-time
-          example: "2025-01-01T00:00:00Z"
-      required:
-       - accountId
-       - name
-       - webHookUrl
-       - authenticationCode
-       - webhookSettings
+    # WebhookMasters:
+    #   type: object
+    #   properties:
+    #    webhookMasterId:
+    #     type: string
+    #     format: uuid
+    #     example: "60d5ec49c3b2a72e4c8b4567"
+    #    accountId:
+    #     type: string
+    #     format: uuid
+    #     example: "60d5ec49c3b2a72e4c8b4568"
+    #    userId:
+    #     type: string
+    #     format: uuid
+    #     example: "60d5ec49c3b2a72e4c8b4569"
+    #    location:
+    #     type: string
+    #     example: "New York"
+    #    name:
+    #     type: string
+    #     example: "OrderWebhook"
+    #    webHookUrl:
+    #     type: string
+    #     format: uri
+    #     example: "https://api.example.com/webhook"
+    #    authenticationCode:
+    #     type: string
+    #     unique: true
+    #     example: "auth-123456"
+    #    requestObject:
+    #     type: object
+    #     example: { "event": "order_created", "data": { "orderId": "12345" } }
+    #    primaryHookId:
+    #     type: string
+    #     example: "primary-001"
+    #    comments:
+    #     type: string
+    #     example: "Webhook for order processing"
+    #    status:
+    #     type: string
+    #     enum:
+    #     - active
+    #     - offline
+    #     - deleted
+    #     example: "active"
+    #    lastPullDate:
+    #     type: string
+    #     format: date-time
+    #     example: "2024-07-23T10:30:00Z"
+    #    webhookSettings:
+    #     type: object
+    #     properties:
+    #      periodType:
+    #       type: string
+    #       enum:
+    #         - each second
+    #         - once each minute
+    #         - once each hour
+    #         - once each day
+    #         - once each month
+    #       example: "once each day"
+    #      currentStatus:
+    #       type: string
+    #       enum:
+    #         - start
+    #         - stop
+    #       example: "stop"
+    #      interval:
+    #       type: integer
+    #       example: 1
+    #      expiresOn:
+    #       type: string
+    #       format: date-time
+    #       example: "2025-01-01T00:00:00Z"
+    #   required:
+    #    - accountId
+    #    - name
+    #    - webHookUrl
+    #    - authenticationCode
+    #    - webhookSettings
 
 #-----------------------------------------------------------------------------------------------------------------------------------
 
@@ -276,6 +276,15 @@ paths:
         - Copy `access_token` from response  
         - Click the **Authorize** button  
         - Place `access_token` in the input box to authorize.
+        - Set `desired expiration time` for a session in either seconds, minutes, hours, days, weeks, or years.  
+          Examples:  
+          - For seconds: `5s`  
+          - For minutes: `5m`  
+          - For hours: `5h`  
+          - For days: `5d`  
+          - For weeks: `5w`  
+          - For years: `5y`  
+          If not given, default is set to `1 hour (1h)`.
       requestBody:
         required: true
         content:
@@ -292,6 +301,11 @@ paths:
                   format: password
                   description: "User's password"
                   example: "0000000001"
+                setExpirationForSession:
+                  type: string
+                  format: password
+                  description: "Set desired expiration time for a session in either seconds, minutes ,hours,days, weeks, or years. Example: For minutes- 5m; For hours- 5h; For days - 5d; For Weeks- 5w; For Years- 5y"
+                  example: " "
       responses:
        200:
         description: "Successful login response"
@@ -301,7 +315,6 @@ paths:
               status: "success"
               message: "Login successfull."
               data:
-                accountId: "67dd586d6d62fb8d7ae1e950"
                 access_token: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiI2N2RkNTg2ZTZkNjJmYjhkN2FlMWU5NTIiLCJpYXQiOjE3NDQxNzMwNDcsImV4cCI6MTc0NDE3NjY0N30.jQe7XNYuDSkwB3HQNjO2tGfkmyd0aHFO6nMMzj-Mjcc"
                
      
@@ -388,7 +401,6 @@ paths:
         - By providing query parameters, users can retrieve denomination details, transaction summaries, and other key performance metrics.  
           The available query parameters are:  
           - `serialNumber`: Filter by the machine's serial number.  
-          - `accountId`: Filter by the associated account ID.  
           - `transactionType`: Filter by the type of transaction `(e.g., CashIn, CashOut)`.  
           - `fromDate`: Retrieve records from this date onward.  `(e.g., 2025-03-31)`
           - `toDate`: Retrieve records up to this date.  `(e.g., 2025-04-01)`
@@ -455,15 +467,15 @@ paths:
                         _id:
                           type: string
                           example: "67eceef889c3a34af5486760"
-                        webhookMasterId:
-                          type: string
-                          example: "67eb8490233046c701342349"
-                        webhookMetaPayloadId:
-                          type: string
-                          example: "67eb8588233046c70134244c"
-                        accountId:
-                          type: string
-                          example: "67eb81cb45715d3e5b678ebb"
+                        # webhookMasterId:
+                        #   type: string
+                        #   example: "67eb8490233046c701342349"
+                        # webhookMetaPayloadId:
+                        #   type: string
+                        #   example: "67eb8588233046c70134244c"
+                        # accountId:
+                        #   type: string
+                        #   example: "67eb81cb45715d3e5b678ebb"
                         pickupGroupId:
                           type: integer
                           example: 566758091
@@ -485,7 +497,7 @@ paths:
                           example: "CashIn"
                         amount:
                           type: number
-                          example: 25
+                          example: 10
                         denominations:
                           type: array
                           items:
@@ -496,7 +508,7 @@ paths:
                                 example: 5
                               Count:
                                 type: integer
-                                example: 1
+                                example: 2
                               Currency:
                                 type: string
                                 example: "USD"
